; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/drivers/font/ftfd/extr_rosglue.c_realloc.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/drivers/font/ftfd/extr_rosglue.c_realloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TAG_FREETYPE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @realloc(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = add i64 8, %7
  %9 = trunc i64 %8 to i32
  %10 = load i32, i32* @TAG_FREETYPE, align 4
  %11 = call i8* @EngAllocMem(i32 0, i32 %9, i32 %10)
  store i8* %11, i8** %5, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %40

14:                                               ; preds = %2
  %15 = load i64, i64* %4, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = bitcast i8* %16 to i64*
  store i64 %15, i64* %17, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = bitcast i8* %18 to i64*
  %20 = getelementptr inbounds i64, i64* %19, i64 1
  %21 = bitcast i64* %20 to i8*
  store i8* %21, i8** %5, align 8
  %22 = load i8*, i8** %3, align 8
  %23 = bitcast i8* %22 to i64*
  %24 = getelementptr inbounds i64, i64* %23, i64 -1
  %25 = load i64, i64* %24, align 8
  store i64 %25, i64* %6, align 8
  %26 = load i64, i64* %4, align 8
  %27 = load i64, i64* %6, align 8
  %28 = icmp ult i64 %26, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %14
  %30 = load i64, i64* %4, align 8
  store i64 %30, i64* %6, align 8
  br label %31

31:                                               ; preds = %29, %14
  %32 = load i8*, i8** %5, align 8
  %33 = load i8*, i8** %3, align 8
  %34 = load i64, i64* %6, align 8
  %35 = call i32 @memcpy(i8* %32, i8* %33, i64 %34)
  %36 = load i8*, i8** %3, align 8
  %37 = bitcast i8* %36 to i64*
  %38 = getelementptr inbounds i64, i64* %37, i64 -1
  %39 = call i32 @EngFreeMem(i64* %38)
  br label %40

40:                                               ; preds = %31, %2
  %41 = load i8*, i8** %5, align 8
  ret i8* %41
}

declare dso_local i8* @EngAllocMem(i32, i32, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1

declare dso_local i32 @EngFreeMem(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
